# Grupo18_Projeto2

./: Abertura_de_ficheiro.cpp  Abertura_de_ficheiro.h  CMakeLists.txt  gestao.cpp  gestao.h  main.cpp  menu.cpp  menu.h  operacoes_de_avioes.cpp  operacoes_de_avioes.h  operacoes_de_passageiros.cpp  structs.h
Grupo18/: Abertura_de_ficheiro.cpp  CMakeLists.txt  gestao.cpp  gestao.h  main.cpp  menu.cpp  operacoes_de_avioes.cpp  operacoes_de_avioes.h  operacoes_de_passageiros.h
