cmake_minimum_required(VERSION 3.27)
project(Grupo18_Projeto2)

set(CMAKE_CXX_STANDARD 17)

add_executable(Grupo18_Projeto2 main.cpp
        structs.h
        operacoes_de_avioes.h
        operacoes_de_avioes.cpp
        operacoes_de_avioes.cpp
        Abertura_de_ficheiro.cpp
        Abertura_de_ficheiro.h)
